# CitrusButter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: 0001-runtime-kernel-3a51cf40.json  0002-memory-boundary-e63f1fcc.json  0003-toolsource-for-mcp-34a5a1ca.json  ROADMAP-e76c631f.json  V1-ARCHITECTURE-23ba1d81.json  V2-CONTEXT-ARCHITECTURE-1ed64805.json  context-builder-and-compactor-b3da3d8e.json
.planning/phases/01-cli-session-persistence/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-SECURITY.md  01-UAT.md  01-VALIDATION.md
docs/: ROADMAP.md  V1_ARCHITECTURE.md  V2_CONTEXT_ARCHITECTURE.md
docs/ADR/: 0001-runtime-kernel.md  0002-memory-boundary.md  0003-toolsource-for-mcp.md
docs/design-thinking/: context-builder-and-compactor.md
site/: index.html  script.js  source-map.js  styles.css
src/citrus/: __init__.py
src/citrus/cli/: __init__.py  app.py
src/citrus/config/: __init__.py  settings.py
src/citrus/context/: __init__.py  builder.py  compactor.py
src/citrus/memory/: __init__.py  base.py  noop.py  service.py
src/citrus/permissions/: __init__.py  base.py  policy.py
tests/: test_cli.py  test_context.py  test_contracts.py  test_local_tools.py  test_memory.py  test_observers.py  test_package.py  test_provider_adapters.py  test_runtime.py  test_sessions.py  test_settings.py  test_tool_sources.py
(+23 files in other folders)
