[project]
name = "citrus-butter"
version = "1.0.0"
description = "A modular Python SDK and CLI coding agent harness."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CitrusButter contributors" }
]
dependencies = [
  "prompt-toolkit>=3.0",
  "pydantic>=2.8",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
providers = [
  "anthropic>=0.34",
  "openai>=1.40",
]

[project.scripts]
citrus = "citrus.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citrus"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["citrus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
